fix(spacing): fix letter spacing feature titles

--- a/sass/homepage.scss
+++ b/sass/homepage.scss
@@ -358,7 +358,6 @@
 	h3 {
 		font-size: 18px;
 		color: #3c3d41;
-		letter-spacing: normal;
 	}
 
 	p {
